--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,69 @@
-# Job Market Analyzer Dependencies
+# Job Market Analyzer Pro - Enhanced Dependencies
 
-# Web Scraping
+# Core web framework
+streamlit==1.28.2
+
+# Data analysis and visualization
+pandas==2.1.3
+numpy==1.25.2
+plotly==5.17.0
+matplotlib==3.8.2
+seaborn==0.13.0
+
+# Database
+# sqlite3 is built into Python
+
+# Machine Learning
+scikit-learn>=1.3.0
+nltk>=3.8.1
+
+# Authentication and security
+PyJWT>=2.8.0
+passlib>=1.7.4
+bcrypt>=4.0.1
+
+# Web scraping
 requests==2.31.0
 beautifulsoup4==4.12.2
 selenium==4.15.2
 lxml==4.9.3
 
-# Data Processing
-pandas==2.1.3
-numpy==1.25.2
-
-# Data Visualization
-matplotlib==3.8.2
-seaborn==0.13.0
-plotly==5.17.0
-
-# Database
-# sqlite3 is built into Python
-
-# Natural Language Processing
+# Text processing
 textblob==0.17.1
 wordcloud==1.9.2
 
-# Configuration
+# Date handling
+python-dateutil>=2.8.2
+
+# Configuration and environment
 python-dotenv==1.0.0
 pyyaml==6.0.1
 
-# Web Framework (for dashboard)
-streamlit==1.28.2
+# File handling
+openpyxl>=3.1.0  # For Excel export
+python-docx>=0.8.11  # For Word document processing
+PyPDF2>=3.0.1  # For PDF processing
 
 # Progress bars and utilities
 tqdm==4.66.1
+
+# Async support
+# asyncio is built into Python
+aiofiles>=23.1.0
+
+# Development and testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+
+# Optional: Enhanced UI components
+streamlit-authenticator>=0.2.3
+streamlit-plotly-events>=0.0.6
+
+# Optional: Advanced analytics
+networkx>=3.1
+
+# Optional: Enhanced caching
+# redis>=4.6.0  # Uncomment if using Redis for caching
+
+# Optional: Advanced data export
+xlsxwriter>=3.1.0
